--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
+<h2>The Walking Dead Survival Game</h2>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" routerLink="">Main Menu</a>
-      <a class="navbar-brand">Name: {{name}}</a>
-      <a class="navbar-brand">Points: {{points}}</a>
     </div>
   </div>
 </nav>
 <div class="container">
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 </div>
